syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

message DeleteOfferListRequest {
	repeated int32 OfferIds = 1;
}