syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "Messages/Types.proto";
import "Parameters/MortgageOffer.proto";

message GetOfferRequest {
	int32 OfferId = 1;
}

message GetOfferResponse {
	CommonOfferData Data = 1;
	
	oneof Parameters {
		MortgageOfferBaseData MortgageOffer = 20;
	}
}
