syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "google/protobuf/wrappers.proto";
import "ModificationStamp.proto";
import "Messages/Types.proto";
import "GrpcDate.proto";

message GetResponseCodeListRequest {
	int64 CaseId = 1;
}

message GetResponseCodeListResponse {
	repeated GetResponseCodeItem Responses = 1;

	message GetResponseCodeItem {
		int32 ResponseCodeId = 1;
		google.protobuf.Int32Value ResponseCodeTypeId = 2;
		google.protobuf.StringValue Data = 3;
		ResponseCodeCategories ResponseCodeCategory = 4;
		cis.types.ModificationStamp Created = 5;
		cis.types.GrpcDate ValidTo = 6;
	}
}